aligns copy icon fixes, fixes spacing in alert, reorders inputs and adds line break in disclaimer

--- a/app/components/Panel/FullHeightPanel/FullHeightPanel.scss
+++ b/app/components/Panel/FullHeightPanel/FullHeightPanel.scss
@@ -5,6 +5,7 @@
   align-items: center;
   margin: auto;
   max-height: 780px;
+  min-height: 780px;
   width: 680px;
 
   .childrenContainer {
